chore(rebrand): replace transentis → dbigman across repo; update pyproject, README, LICENSE, scripts, and remotes

--- a/model_library/beergame/beergame_sd_dsl.ipynb
+++ b/model_library/beergame/beergame_sd_dsl.ipynb
@@ -1,4 +1,4 @@
-{
+﻿{
  "cells": [
   {
    "cell_type": "raw",
@@ -36,7 +36,7 @@
     "* The Beer Game neatly illustrates the _dynamics of supply chains_, in particular the [bullwhip effect](https://en.wikipedia.org/wiki/Bullwhip_effect).\n",
     "* In a very tangible way, the game demonstrates how difficult it is to _manage dynamic systems_, even if you think you understand them, along with the frustration that can arise when you don't have control of all variables in the system.\n",
     "* It is a wonderful illustration of _model-driven scientific thinking_ - reducing a complex reality to a conceptually much simpler model and then using that model to reason about reality.\n",
-    "* The Beer Game is also a great object of study to see how computational modeling can help you to understand complex systems. I've always been a fan of [Raymond Queneau's](https://en.wikipedia.org/wiki/Raymond_Queneau) brilliant [Exercises In Style](https://en.wikipedia.org/wiki/Exercises_in_Style) that retells the same story in 99 different styles – our open source [GitHub repository](https://github.com/transentis/beergame) now illustrates three different ways of building a simulation model of the Beer Game, using System Dynamics XMILE, the System Dynamics DSL and Agent-based modeling.\n",
+    "* The Beer Game is also a great object of study to see how computational modeling can help you to understand complex systems. I've always been a fan of [Raymond Queneau's](https://en.wikipedia.org/wiki/Raymond_Queneau) brilliant [Exercises In Style](https://en.wikipedia.org/wiki/Exercises_in_Style) that retells the same story in 99 different styles – our open source [GitHub repository](https://github.com/dbigman/beergame) now illustrates three different ways of building a simulation model of the Beer Game, using System Dynamics XMILE, the System Dynamics DSL and Agent-based modeling.\n",
     "* I have also found the game to be a useful testbed to see how machine learning techniques such as reinforcement learning can be used to train agents to play the beer game autonomously, as documented in the notebook [Training AI to Play the Beer Game](training_ai_beergame.ipynb).\n",
     "\n",
     "I've already written about the Beer Game quite extensively, in particular the notebook [Understanding the Beer Game](understanding_the_beergame.ipynb) analyzes playing strategies in detail using a simulation model built using System Dynamics.\n",
@@ -805,3 +805,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
