--- a/quickstart/quickstart.ipynb
+++ b/quickstart/quickstart.ipynb
@@ -1,4 +1,4 @@
-{
+﻿{
  "cells": [
   {
    "cell_type": "raw",
@@ -59,7 +59,7 @@
     "\n",
     "![BPTK Building Blocks](./images/bptk_components.svg)\n",
     "\n",
-    "You can view an example dashboard illustrating different COVID-Scenarios [online](http://www.covid-sim.com), the respositories for the [dashboard](https://github.com/transentis/sim-covid-dashboard) and [simulation](https://github.com/transentis/sim-covid-19) are available on [GitHub](https://github.com/transentis/)."
+    "You can view an example dashboard illustrating different COVID-Scenarios [online](http://www.covid-sim.com), the respositories for the [dashboard](https://github.com/dbigman/sim-covid-dashboard) and [simulation](https://github.com/dbigman/sim-covid-19) are available on [GitHub](https://github.com/dbigman/)."
    ]
   },
   {
@@ -2118,3 +2118,4 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
+
