style: apply ruff --unsafe-fixes and black autoformat

--- a/api/api_bptk_server/api_bptk_server.ipynb
+++ b/api/api_bptk_server/api_bptk_server.ipynb
@@ -243,8 +243,7 @@
    "outputs": [],
    "source": [
     "# find documentation for the requests library on https://docs.python-requests.org/\n",
-    "import requests\n",
-    "import json"
+    "import requests"
    ]
   },
   {
