--- a/sd-dsl/sd_dsl_under_the_hood/sd_dsl_under_the_hood.ipynb
+++ b/sd-dsl/sd_dsl_under_the_hood/sd_dsl_under_the_hood.ipynb
@@ -159,8 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib"
+    "import pandas as pd"
    ]
   },
   {
